# SentinelAI

./: .gitignore  README.md
.github/workflows/: checkout-service-ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  specialists.py
backend/app/api/: dependencies.py  routes.py
backend/app/config/: settings.py
backend/app/core/: interfaces.py  types.py
backend/app/database/: repositories.py  session.py
backend/app/github/: commands.py  security.py
backend/app/integrations/: argocd.py  base.py
backend/app/integrations/git/: __init__.py
backend/app/integrations/github/: __init__.py  connector.py
backend/app/integrations/grafana/: __init__.py  connector.py
backend/app/integrations/historical/: __init__.py  chroma.py
backend/app/integrations/kubernetes/: __init__.py  connector.py
backend/app/integrations/loki/: __init__.py  connector.py
backend/app/integrations/pipelines/: __init__.py  github_actions.py
backend/app/integrations/prometheus/: __init__.py  connector.py
backend/app/integrations/sustainability/: __init__.py
backend/app/models/: entities.py
backend/app/planner/: graph.py  planner.py
backend/app/reasoning/: root_cause.py
backend/app/recommendation/: engine.py
backend/app/services/: evidence_graph.py  orchestrator.py  summary.py
backend/app/tests/: test_connectors.py  test_evidence_graph.py  test_github_security.py  test_orchestrator.py  test_planner.py  test_streaming.py  test_sustainability.py
backend/migrations/: README.md  env.py
(+6 files in other folders)
