[project]
name = "sentinel-ai"
version = "0.1.0"
description = "AI-native engineering operations platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0", "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.5,<3.0", "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0", "httpx>=0.27,<1.0", "openai>=1.40,<2.0",
  "redis>=5.0,<6.0", "tenacity>=9.0,<10.0", "alembic>=1.13,<2.0",
  "langgraph>=0.2,<1.0", "kubernetes-asyncio>=30,<34", "chromadb>=0.5,<2.0",
  "opentelemetry-api>=1.27,<2.0", "opentelemetry-sdk>=1.27,<2.0",
  "pyjwt>=2.9,<3.0"
]

[project.optional-dependencies]
workers = ["celery[redis]>=5.4,<6.0"]
vector = ["chromadb>=0.5,<1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
